--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "_moduleAliases": {
         "@": "."
     },
+    "bin": {
+        "sql-server-db": "./bin/db"
+    },
     "scripts": {
         "dev": "ts-node-dev --respawn ./app.ts",
+        "init": "npm link && sql-server-db init",
         "resetFolder": "rimraf dist/*",
         "compile": "tsc",
         "build": "npm-run-all resetFolder compile",
@@ -46,6 +50,7 @@
         "typescript": "^4.6.2"
     },
     "dependencies": {
+        "bluebird": "^3.7.2",
         "ejs": "^3.1.6",
         "koa": "^2.13.4",
         "koa-bodyparser": "^4.3.0",
@@ -56,8 +61,12 @@
         "koa-router": "^10.1.1",
         "koa-static": "^5.0.0",
         "koa-views": "^8.0.0",
+        "lodash": "^4.17.21",
         "log4js": "^6.4.2",
         "module-alias": "^2.2.2",
-        "redis": "^4.0.4"
+        "mysql2": "^2.3.3",
+        "redis": "^4.0.4",
+        "sequelize": "^6.17.0",
+        "yargs": "^17.3.1"
     }
 }
