--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "description": "A background application interface for listening to books and videos",
     "version": "1.0.0",
     "main": "dist/app.js",
+    "types": "dist/app.d.ts",
     "author": {
         "name": "jinjinjiang",
         "email": "jjjisbest@sina.com",
@@ -30,7 +31,8 @@
         "resetFolder": "rimraf dist/*",
         "compile": "tsc",
         "build": "npm-run-all resetFolder compile",
-        "start": "node ."
+        "start:dev": "nodemon ./dist/app.js",
+        "start:prod": "pm2 start ecosystem.config.js --name production"
     },
     "husky": {
         "hooks": {
@@ -38,7 +40,7 @@
         }
     },
     "lint-staged": {
-        "src/**/*.{ts,tsx}": [
+        "src/**/*.{ts,js}": [
             "prettier --write",
             "eslint --fix",
             "git add"
@@ -59,6 +61,8 @@
         "@typescript-eslint/parser": "^5.14.0",
         "eslint": "^8.10.0",
         "eslint-config-prettier": "^8.5.0",
+        "husky": "^7.0.4",
+        "lint-staged": "^12.3.6",
         "npm-run-all": "^4.1.5",
         "prettier": "^2.5.1",
         "ts-node-dev": "^1.1.8",
@@ -80,6 +84,7 @@
         "log4js": "^6.4.2",
         "module-alias": "^2.2.2",
         "mysql2": "^2.3.3",
+        "pm2": "^5.2.0",
         "redis": "^4.0.4",
         "sequelize": "^6.17.0",
         "yargs": "^17.3.1"
