--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,7 @@
     "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
     "paths": {
       "@/*": ["./*"],
-      "@utils/*": ["./utils/*"],
+      // "@utils/*": ["./utils/*"],
     },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
@@ -101,6 +101,6 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "include": [".eslintrc.js", "app.ts"],
+  "include": [".eslintrc.js", "./routers", "./models", "app.ts"],
   "exclude": ["node_modules", "dist"]
 }
